--- a/app/Resources/views/base2Calculator.html.twig
+++ b/app/Resources/views/base2Calculator.html.twig
@@ -1,4 +1,14 @@
-<?php require 'base.html.twig'; ?>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8" />
+    <title>{% block title %}CALCULADORA SYMFONY{% endblock %}</title>
+
+</head>
+<body>
+{% block body %}
+
+<h1>CALCULADORA SYMFONY</h1>
 
 <ul>
     <li><a href="{{ path('homepage') }}">Index</a></li>
@@ -8,3 +18,7 @@
     <li><a href="{{ path('app_calculator_divideAction') }}">DIVIDIR</a></li>
 
 </ul>
+{% endblock %}
+{% block javascripts %}{% endblock %}
+</body>
+</html>
